--- a/influxdb-storage.yml
+++ b/influxdb-storage.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: prometheus-pvc
   labels:
-    vol: prometheus-storage
+    app: influxdb
+  name: influxdb-pvc
 spec:
   accessModes:
-    - ReadWriteMany
+  - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: 2Gi
