--- a/influxdb-deploy.yml
+++ b/influxdb-deploy.yml
@@ -25,6 +25,12 @@ spec:
           ports:
             - containerPort: 8086
               name: influxdb
+          env:
+            - name: INFLUXDB_QUERY_CONCURRENCY
+              valueFrom:
+                  configMapKeyRef:
+                      name: influxdb-config
+                      key: query-concurrency
           volumeMounts:
           - name: influxdb-data-store
             mountPath: /root/.influxdbv2
