--- a/influxdb-configmaps.yml
+++ b/influxdb-configmaps.yml
@@ -2,5 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: influxdb-config
+  labels:
+    app: influxdb
 data:
   INFLUXDB_QUERY_CONCURRENCY: "20"
