--- a/influxdb-service.yml
+++ b/influxdb-service.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name:  influxdb-service
+  labels:
+    app: influxdb
 spec:
   selector:
     app:  influxdb
